// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-tax-id-input Renders AU Tax Type 1`] = `
<sc-tax-id-input country="AU">
  <mock:shadow-root>
    <sc-input name="tax_identifier.number_type" value="other" style="display: none;"></sc-input>
    <sc-input aria-label="Tax ID" label="Tax ID" name="tax_identifier.number" placeholder="Enter Tax ID">
      <sc-dropdown aria-label="Select number type" aria-multiselectable="false" position="bottom-right" role="select" slot="suffix">
        <sc-button caret="" slot="trigger" tabindex="0" type="text" style="color: var(--sc-input-label-color);">
          Other
        </sc-button>
        <sc-menu>
          <sc-menu-item aria-label="CA GST" aria-selected="false" role="option">
            CA GST
          </sc-menu-item>
          <sc-menu-item aria-label="AU ABN" aria-selected="false" role="option">
            AU ABN
          </sc-menu-item>
          <sc-menu-item aria-label="UK VAT" aria-selected="false" role="option">
            UK VAT
          </sc-menu-item>
          <sc-menu-item aria-label="EU VAT" aria-selected="false" role="option">
            EU VAT
          </sc-menu-item>
          <sc-menu-item aria-label="Other" aria-selected="true" checked="" role="option">
            Other
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </sc-input>
  </mock:shadow-root>
</sc-tax-id-input>
`;

exports[`sc-tax-id-input Renders CA Tax Type 1`] = `
<sc-tax-id-input country="CA">
  <mock:shadow-root>
    <sc-input name="tax_identifier.number_type" value="other" style="display: none;"></sc-input>
    <sc-input aria-label="Tax ID" label="Tax ID" name="tax_identifier.number" placeholder="Enter Tax ID">
      <sc-dropdown aria-label="Select number type" aria-multiselectable="false" position="bottom-right" role="select" slot="suffix">
        <sc-button caret="" slot="trigger" tabindex="0" type="text" style="color: var(--sc-input-label-color);">
          Other
        </sc-button>
        <sc-menu>
          <sc-menu-item aria-label="CA GST" aria-selected="false" role="option">
            CA GST
          </sc-menu-item>
          <sc-menu-item aria-label="AU ABN" aria-selected="false" role="option">
            AU ABN
          </sc-menu-item>
          <sc-menu-item aria-label="UK VAT" aria-selected="false" role="option">
            UK VAT
          </sc-menu-item>
          <sc-menu-item aria-label="EU VAT" aria-selected="false" role="option">
            EU VAT
          </sc-menu-item>
          <sc-menu-item aria-label="Other" aria-selected="true" checked="" role="option">
            Other
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </sc-input>
  </mock:shadow-root>
</sc-tax-id-input>
`;

exports[`sc-tax-id-input Renders EU VAT Tax Type 1`] = `
<sc-tax-id-input country="DE">
  <mock:shadow-root>
    <sc-input name="tax_identifier.number_type" value="other" style="display: none;"></sc-input>
    <sc-input aria-label="Tax ID" label="Tax ID" name="tax_identifier.number" placeholder="Enter Tax ID">
      <sc-dropdown aria-label="Select number type" aria-multiselectable="false" position="bottom-right" role="select" slot="suffix">
        <sc-button caret="" slot="trigger" tabindex="0" type="text" style="color: var(--sc-input-label-color);">
          Other
        </sc-button>
        <sc-menu>
          <sc-menu-item aria-label="CA GST" aria-selected="false" role="option">
            CA GST
          </sc-menu-item>
          <sc-menu-item aria-label="AU ABN" aria-selected="false" role="option">
            AU ABN
          </sc-menu-item>
          <sc-menu-item aria-label="UK VAT" aria-selected="false" role="option">
            UK VAT
          </sc-menu-item>
          <sc-menu-item aria-label="EU VAT" aria-selected="false" role="option">
            EU VAT
          </sc-menu-item>
          <sc-menu-item aria-label="Other" aria-selected="true" checked="" role="option">
            Other
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </sc-input>
  </mock:shadow-root>
</sc-tax-id-input>
`;

exports[`sc-tax-id-input Renders UK VAT Tax Type 1`] = `
<sc-tax-id-input country="GB">
  <mock:shadow-root>
    <sc-input name="tax_identifier.number_type" value="other" style="display: none;"></sc-input>
    <sc-input aria-label="Tax ID" label="Tax ID" name="tax_identifier.number" placeholder="Enter Tax ID">
      <sc-dropdown aria-label="Select number type" aria-multiselectable="false" position="bottom-right" role="select" slot="suffix">
        <sc-button caret="" slot="trigger" tabindex="0" type="text" style="color: var(--sc-input-label-color);">
          Other
        </sc-button>
        <sc-menu>
          <sc-menu-item aria-label="CA GST" aria-selected="false" role="option">
            CA GST
          </sc-menu-item>
          <sc-menu-item aria-label="AU ABN" aria-selected="false" role="option">
            AU ABN
          </sc-menu-item>
          <sc-menu-item aria-label="UK VAT" aria-selected="false" role="option">
            UK VAT
          </sc-menu-item>
          <sc-menu-item aria-label="EU VAT" aria-selected="false" role="option">
            EU VAT
          </sc-menu-item>
          <sc-menu-item aria-label="Other" aria-selected="true" checked="" role="option">
            Other
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </sc-input>
  </mock:shadow-root>
</sc-tax-id-input>
`;

exports[`sc-tax-id-input Shows the updated labels when modified labels are passed 1`] = `
<sc-tax-id-input other-label="Other test">
  <mock:shadow-root>
    <sc-input name="tax_identifier.number_type" value="other" style="display: none;"></sc-input>
    <sc-input aria-label="Tax ID" label="Other test" name="tax_identifier.number" placeholder="Enter Tax ID">
      <sc-dropdown aria-label="Select number type" aria-multiselectable="false" position="bottom-right" role="select" slot="suffix">
        <sc-button caret="" slot="trigger" tabindex="0" type="text" style="color: var(--sc-input-label-color);">
          Other
        </sc-button>
        <sc-menu>
          <sc-menu-item aria-label="CA GST" aria-selected="false" role="option">
            CA GST
          </sc-menu-item>
          <sc-menu-item aria-label="AU ABN" aria-selected="false" role="option">
            AU ABN
          </sc-menu-item>
          <sc-menu-item aria-label="UK VAT" aria-selected="false" role="option">
            UK VAT
          </sc-menu-item>
          <sc-menu-item aria-label="EU VAT" aria-selected="false" role="option">
            EU VAT
          </sc-menu-item>
          <sc-menu-item aria-label="Other" aria-selected="true" checked="" role="option">
            Other
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </sc-input>
  </mock:shadow-root>
</sc-tax-id-input>
`;

exports[`sc-tax-id-input renders 1`] = `
<sc-tax-id-input>
  <mock:shadow-root>
    <sc-input name="tax_identifier.number_type" value="other" style="display: none;"></sc-input>
    <sc-input aria-label="Tax ID" label="Tax ID" name="tax_identifier.number" placeholder="Enter Tax ID">
      <sc-dropdown aria-label="Select number type" aria-multiselectable="false" position="bottom-right" role="select" slot="suffix">
        <sc-button caret="" slot="trigger" tabindex="0" type="text" style="color: var(--sc-input-label-color);">
          Other
        </sc-button>
        <sc-menu>
          <sc-menu-item aria-label="CA GST" aria-selected="false" role="option">
            CA GST
          </sc-menu-item>
          <sc-menu-item aria-label="AU ABN" aria-selected="false" role="option">
            AU ABN
          </sc-menu-item>
          <sc-menu-item aria-label="UK VAT" aria-selected="false" role="option">
            UK VAT
          </sc-menu-item>
          <sc-menu-item aria-label="EU VAT" aria-selected="false" role="option">
            EU VAT
          </sc-menu-item>
          <sc-menu-item aria-label="Other" aria-selected="true" checked="" role="option">
            Other
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </sc-input>
  </mock:shadow-root>
</sc-tax-id-input>
`;
